# api/docs/swagger.json
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/authcontroller.LoginBody"
+                            "$ref": "#/definitions/auth.LoginBody"
                         }
                     }
                 ],
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/authcontroller.TokenResponse"
+                            "$ref": "#/definitions/auth.TokenResponse"
                         }
                     },
                     "400": {
@@ -88,6 +88,160 @@
                 }
             }
         },
+        "/banners/all": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "banners"
+                ],
+                "summary": "Получение всех баннеров",
+                "responses": {
+                    "200": {
+                        "description": "Список всех баннеров",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/internal_controller_banner.Banner"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/banners/create": {
+            "post": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "banners"
+                ],
+                "summary": "Создание баннера",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID коллекции",
+                        "name": "collection_id",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "Изображение",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Изображение для мобильных устройств",
+                        "name": "mobile_image",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Баннер создан",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_banner.Banner"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат данных",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Нет доступа",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Коллекция не найдена",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/banners/delete/{id}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "banners"
+                ],
+                "summary": "Удаление баннера",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID баннера",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Баннер успешно удален",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_banner.Banner"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный формат данных",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Нет доступа",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Баннер не найден",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/res.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/collections/all": {
             "get": {
                 "description": "Получение списка всех коллекций",
@@ -107,7 +261,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/collectionscontroller.Collection"
+                                "$ref": "#/definitions/collections.Collection"
                             }
                         }
                     },
@@ -159,7 +313,7 @@
                     "201": {
                         "description": "Коллекция успешно создана",
                         "schema": {
-                            "$ref": "#/definitions/collectionscontroller.Collection"
+                            "$ref": "#/definitions/collections.Collection"
                         }
                     },
                     "400": {
@@ -209,7 +363,7 @@
                     "200": {
                         "description": "Коллекция успешно удалена",
                         "schema": {
-                            "$ref": "#/definitions/collectionscontroller.Collection"
+                            "$ref": "#/definitions/collections.Collection"
                         }
                     },
                     "400": {
@@ -283,7 +437,7 @@
                     "200": {
                         "description": "Коллекция успешно обновлена",
                         "schema": {
-                            "$ref": "#/definitions/collectionscontroller.Collection"
+                            "$ref": "#/definitions/collections.Collection"
                         }
                     },
                     "400": {
@@ -339,7 +493,7 @@
                     "200": {
                         "description": "Данные коллекции",
                         "schema": {
-                            "$ref": "#/definitions/collectionscontroller.Collection"
+                            "$ref": "#/definitions/collections.Collection"
                         }
                     },
                     "400": {
@@ -391,7 +545,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/itemscontroller.Item"
+                                "$ref": "#/definitions/items.Item"
                             }
                         }
                     },
@@ -461,7 +615,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/itemscontroller.Item"
+                            "$ref": "#/definitions/items.Item"
                         }
                     },
                     "400": {
@@ -516,7 +670,7 @@
                     "200": {
                         "description": "Item successfully deleted",
                         "schema": {
-                            "$ref": "#/definitions/itemscontroller.Item"
+                            "$ref": "#/definitions/items.Item"
                         }
                     },
                     "400": {
@@ -589,7 +743,7 @@
                     "201": {
                         "description": "Item successfully updated",
                         "schema": {
-                            "$ref": "#/definitions/itemscontroller.Item"
+                            "$ref": "#/definitions/items.Item"
                         }
                     },
                     "400": {
@@ -644,7 +798,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/itemscontroller.Item"
+                            "$ref": "#/definitions/items.Item"
                         }
                     },
                     "400": {
@@ -670,7 +824,7 @@
         }
     },
     "definitions": {
-        "authcontroller.LoginBody": {
+        "auth.LoginBody": {
             "type": "object",
             "properties": {
                 "code": {
@@ -678,7 +832,7 @@
                 }
             }
         },
-        "authcontroller.TokenResponse": {
+        "auth.TokenResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -686,7 +840,7 @@
                 }
             }
         },
-        "collectionscontroller.Collection": {
+        "collections.Collection": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -711,7 +865,24 @@
                 }
             }
         },
-        "itemscontroller.Item": {
+        "internal_controller_banner.Banner": {
+            "type": "object",
+            "properties": {
+                "collection_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image_id": {
+                    "type": "string"
+                },
+                "mobile_image_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "items.Item": {
             "type": "object",
             "properties": {
                 "collection_id": {
